styles.css
/* ... */
/* Inline code (single backtick) */
code {
    color: var(--sidebar-purple);
    background-color: #f6f8fa;
    display: inline;
    padding: 0.2em 0.4em;
    border-radius: 6px;
    font-size: 85%;
    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; 
    font-weight: normal;
    border: 1px solid #e1e4e8;
  }
  
  /* Block code (triple backticks) */
  pre code {
    color: #24292e;
    background-color: #f6f8fa;
    display: block;
    padding: 16px;
    overflow-x: auto;
    border-radius: 6px;
    font-size: 85%;
    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
    border: 1px solid #e1e4e8; /* Consistent border style */
  }


/* 
# --------------------
# Topbar
# -------------------- 
*/

.topbar {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
    background-color: #fff;
    height: var(--topbar-height);
    display: flex;
    align-items: center;
    padding: 0 0px;
    width: 100%;
    min-width: var(--content-min-width);
    flex-direction: column;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Subtle drop shadow */
    position: fixed;
    z-index: 9999;
}

#topbar-wrapper {
    height: var(--topbar-height);
    display: flex;
    align-items: center;
    justify-content: space-between; /* Push links to left and dropdown/socials to right */
    padding: 0 20px;
    width: 100%;
    max-width: calc(var(--content-max-width) + (var(--content-max-width) * 0.2));
    min-width: var(--content-min-width);
    box-sizing: border-box;
}

.links {
    display: flex;
    align-items: center;
}

/* Left links (Install, Tutorials, etc.) */
.links a {
    color: #757575;
    font-size: 17px;
    padding: 0px 10px;
    text-decoration: none;
    display: inline-flex;
    align-items: center;

}

.links a:hover {
    color: var(--sidebar-purple);
    /* transition: transform 0.3s ease;
    transform: scale(1.05); */
    text-decoration: underline;
    text-underline-offset: 10px;
    text-decoration-thickness: 3px;
}

.home-link {
    display: inline-flex;
    text-decoration: none;
    height: inherit;
    padding: 0px;
    align-items: center;
}

.home-icon-container {
    height: inherit;
    align-items: center;
    position: relative;
    display: inline-flex;
    justify-content: center;

}

.home-icon {
    fill: grey;
    height: 22px;
    width: auto;
    transition: transform 0.3s ease;
}

.home-icon:hover {
    /* transform: scale(1.05); */
    fill: var(--sidebar-purple);
}

/* add underline to home icon */
.home-icon-container:hover::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: -9px; /* matches text-underline-offset: 10px */
    height: 3px;
    background-color: var(--sidebar-purple);
}

/* Right section for dropdown and social icons */
.topbar-right {
    display: flex;
    align-items: center;
    gap: 0px; /* Space between dropdown and social icons */
    margin-right: 10px;
    padding-left: 30px;
}

/* Style for "More" dropdown button */
.dropdown {
    height: inherit;
    align-items: center;
    position: relative;
    display: inline-flex;
    font-size: 17px;
    cursor: pointer;
    background: none;
    color: grey;
    margin: 0px 10px;
}

.dropdown-button {
    all: unset;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    padding: 0px 10px;
    border: 2px solid var(--icon-base);
    border-radius: 15px;
    /* transition: box-shadow 0.3s ease; */
    transition: box-shadow;
}

.dropdown-button:hover {
    /* border-color: var(--sidebar-purple); */
    border: 2px solid var(--sidebar-purple);
    box-shadow: 0 0 0 1px var(--sidebar-purple);
    
}

.dropdown-text {
    display: inline-block;
    position: relative;
    white-space: nowrap;
}

.caret {
    display: inline-block;
    width: 8px;
    height: 8px;
    border-left: 2px solid grey;
    border-bottom: 2px solid grey;
    transform: rotate(-45deg);
    margin-left: 6px;
    position: relative;
    bottom: 3px;
}

.dropdown-button:hover .caret {
    border-color: var(--sidebar-purple); 
}

/* box shadow in case below simulates underline text decoration */
.dropdown-button:hover .dropdown-text {
    color: var(--sidebar-purple);
    /* box-shadow: 0 3px 0 var(--sidebar-purple); */
}

.dropdown-content {
    display: none;
    position: absolute;
    top: 125%;
    right: 0;
    background-color: #fff;
    width: auto;
    border: 2px solid var(--lighter-gray);
    border-radius: 6px;
    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
    padding: 10px 20px;
    white-space: nowrap; 
}

.dropdown-content a {
    color: inherit;
    font-size: inherit;
    padding: 5px 10px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    color: var(--sidebar-purple);  
    text-decoration: underline;
    text-underline-offset: 10px; 
    text-decoration-thickness: 3px;
    transform: scale(1.02);
}


/* make more button show on hover /*
/* .dropdown:hover .dropdown-content {
    display: block;
} */

/* Social icons styles */
.social-icons {
    display: flex;
    gap: 15px;
    padding: 0px;
    margin-left: 10px
}

.social-icons a {
    display: flex;
    align-items: center;
    text-decoration: none;
    transition: transform 0.2s ease; /* zoom transition */
}

.social-icons a img {
    width: auto;
    height: 20px;
    object-fit: contain;
    display: block;
}

.social-icons a:hover {
    transform: scale(1.1); /* zoom on hover */
}

/* 
# --------------------
# Gallery 
# -------------------- 
*/

/* Gallery Container */
.gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px 0px;
}
/* ... */

